Changes in HTML and style

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <div class="background">
       <h1>Broadway Design</h1>
 
-        <ul style= "list-style: none; color: white;">
-            <li><a href="#home">Home</a></li><br>
-            <li><a href="#process">Process</a></li><br>
-            <li><a href="#work">Work</a></li><br>
-            <li><a href="#team">Team</a></li><br>
-            <li><a href="#contact">Contact</a></li>
+      <ul style= "list-style: none; color: white;">
+            <li id="home">Home</a></li><br>
+            <li id="home">Process</a></li><br>
+            <li id="work">Work</a></li><br>
+            <li id="team">Team</a></li><br>
+            <li id="contact">Contact</a></li>
+
         </ul>
     </div>
 
@@ -55,7 +56,7 @@
     <p>Phone: (555)-555-555 <br> E-mail: test@example.com <br> Twitter: @test</p>
 
     <div class="footer">
-      <p>© Broadway 2017 <id="home">Home <id="about">About <id="work">Work </p>
+      <p>© Broadway 2017 <a href="#home">Home <a href="#home">About <a href="#work">Work <a href="#team">Team <a href="#contact">Contact</p>
 
 
     </div>
